kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: 'ghcr.io/aditya-nv-06/opspro:sha-138c891b2a237265ef7f6bb711cad43e48f331ce'
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
      liveProbe:
        httpGet:
         path: /
         port: 80
      readinessProbe:
        httpGet:
         path: /
         port: 80
        initailDelaySeconds: 5
        periodSeconds: 5
      imagePullSecrets:
       - name: github-container-registry
